Updating deprecated package

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "homepage": "https://github.com/peterdemartini/github-jobs",
   "dependencies": {
     "restler": "~3.2.2",
-    "lodash": "~2.4.1",
-    "URIjs": "~1.13.1"
+    "lodash": "~2.4.1"
   }
 }
