--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "dependencies": {
     "restler": "~3.2.2",
     "lodash": "~2.4.1"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.4"
   }
 }
