--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/peterdemartini/github-jobs",
   "dependencies": {
-    "restler": "~3.2.2",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "q": "^1.4.1",
+    "restler": "~3.2.2"
   },
   "devDependencies": {
     "mocha": "^2.3.4"
