--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "lodash": "~2.4.1",
     "q": "^1.4.1",
-    "restler": "~3.2.2"
+    "restler": "~3.2.2",
+    "urijs": "^1.17.0"
   },
   "devDependencies": {
     "mocha": "^2.3.4"
